[#806] G-cal alignment fixed to the right

--- a/code/wp-content/themes/Akvo-responsive/css/main.css
+++ b/code/wp-content/themes/Akvo-responsive/css/main.css
@@ -6020,3 +6020,7 @@ div[id^="inline-"] {
 .tribe-events-list h2.tribe-events-page-title{
 	font-size: 2.3em !important;
 }
+
+.tribe-events-gcal{
+	margin-right: 0px !important;
+}
